--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   path_provider: ^2.1.1
   flutter_staggered_grid_view: ^0.7.0
   intl: ^0.18.1
+  flutter_local_notifications:
+  timezone: ^0.9.2
+  rxdart: ^0.27.7
+  http: ^1.1.0
+  flutter_timezone: ^1.0.8
 
 dev_dependencies:
   flutter_test:
