--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   flutter_timezone: ^1.0.8
   flutter_staggered_animations: ^1.1.1
   auto_animated: ^3.2.0
+  shared_preferences: ^2.2.2
+  provider: ^6.0.5
+  image_picker: ^1.0.4
+  photo_view: ^0.14.0
 
 dev_dependencies:
   flutter_test:
