--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   provider: ^6.0.5
   image_picker: ^1.0.4
   photo_view: ^0.14.0
+  photo_manager: ^2.7.2
 
 dev_dependencies:
   flutter_test:
