--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   image_picker: ^1.0.4
   photo_view: ^0.14.0
   photo_manager: ^2.7.2
+  flutter_share: ^2.0.0
+  share_plus: ^7.2.1
 
 dev_dependencies:
   flutter_test:
