--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   intl: ^0.18.1
   flutter_local_notifications:
-  timezone: ^0.9.2
+  # timezone: ^0.9.2
   rxdart: ^0.27.7
   http: ^1.1.0
   flutter_timezone: ^1.0.8
@@ -49,9 +49,10 @@ dependencies:
   provider: ^6.0.5
   image_picker: ^1.0.4
   photo_view: ^0.14.0
-  photo_manager: ^2.7.2
+  # photo_manager: 
   flutter_share: ^2.0.0
   share_plus: ^7.2.1
+  image_gallery_saver: ^2.0.3
 
 dev_dependencies:
   flutter_test:
