--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -74,4 +74,6 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.window:window:1.0.0'
     implementation 'androidx.window:window-java:1.0.0'
+    implementation "com.android.support:multidex:1.0.3"
+
 }
