--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,12 @@ dependencies:
   flutter_share: ^2.0.0
   share_plus: ^7.2.1
   image_gallery_saver: ^2.0.3
+  pdf:
+  flutter_localizations:
+    sdk: flutter
+  printing: ^5.11.1
+  local_auth: ^2.1.7
+  
 
 dev_dependencies:
   flutter_test:
@@ -79,6 +85,9 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+    - assets/lang/gu.json
+    - assets/lang/en.json
+    - assets/lang/hi.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
