--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   awesome_notifications: ^0.8.2
   awesome_notifications_core:
   permission_handler: ^11.1.0
+  animations: ^2.0.10
   
 
 dev_dependencies:
