--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   awesome_notifications_core:
   permission_handler: ^11.1.0
   animations: ^2.0.10
+  camera: ^0.10.5+7
+  google_mlkit_text_recognition: ^0.11.0
   
 
 dev_dependencies:
