--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         <activity
             android:name=".MainActivity"
             android:showWhenLocked="false"
-            android:theme="@style/Theme.AppCompat.DayNight"
+            android:theme="@style/LaunchTheme"
             android:turnScreenOn="true"
             android:exported="true"
             android:launchMode="singleTop"
